<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/habit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/habitTitle"
            app:layout_constraintTop_toTopOf="@+id/habitTitle"/>
    <EditText
            android:id="@+id/habitTitle"
            android:inputType="text"
            android:hint="@string/habit_title_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            android:text="@string/habit_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/habitFrequencyTitle"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/habitFrequency"
            app:layout_constraintTop_toTopOf="@+id/habitFrequency"/>
    <EditText
            android:id="@+id/habitFrequency"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/habitFrequencyTitle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/habitTitle"
            app:layout_constraintEnd_toStartOf="@+id/textView3"/>

    <TextView
            android:text="@string/habit_frequency_dimension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/habitFrequency"
            app:layout_constraintTop_toTopOf="@+id/habitFrequency"
            app:layout_constraintVertical_bias="0.476"
            android:id="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

    <EditText
            android:id="@+id/habitDescription"
            android:inputType="text"
            android:hint="@string/habit_description_hint"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/habitFrequency"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="top|start"/>

</android.support.constraint.ConstraintLayout>