<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <TextView
            android:text="@string/task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/taskTitle"
            app:layout_constraintTop_toTopOf="@+id/taskTitle"/>
    <EditText
            android:id="@+id/taskTitle"
            android:inputType="text"
            android:hint="@string/task_title_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            android:text="@string/task_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/taskDeadlineTitle"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/taskDeadline"
            app:layout_constraintTop_toTopOf="@+id/taskDeadline"/>

    <LinearLayout
            android:id="@+id/taskDeadline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/taskTitle"
            app:layout_constraintStart_toEndOf="@+id/taskDeadlineTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">
        <Button
                android:id="@+id/taskDeadlineDate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/taskDeadlineTime"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
    </LinearLayout>

    <EditText
            android:id="@+id/taskDescription"
            android:inputType="text"
            android:hint="@string/task_description_hint"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/taskDeadline"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="top|start"/>
</android.support.constraint.ConstraintLayout>